--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,7 +1,8 @@
 .About{
-    height: 300vh;
+    height: 220vh;
     display: flex;
     align-items: center;
+    border: solid 3px;
 }
 .About-left{
     flex: 1;
