lanjutkan bagian Contact.jsx

--- a/src/Components/ProductList/productlist.css
+++ b/src/Components/ProductList/productlist.css
@@ -16,5 +16,17 @@
     margin: 20px 0px;
 }
 .ProductList-list{
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;     
+    justify-content: space-between;  
+}
+/* adjust flexwrap */
+
+.ProductList-Container{
+    border: 5px solid;
+}
+.ProductList-Title{
+    font-weight: bold;
+    text-align: left;
 }
