--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -17,21 +17,63 @@ flex: 1;
 }
 .Contact-Right{
 flex: 1;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
 }
 
 .Contact-title{
     font-size: 60px;
     width: 80%;
 }
+
 .Contact-Info-Item{
     display: flex;
     align-items: center;
     margin: 50px 0px;
     font-weight: 300;
-    width: 90%;
+    width: 80%;
 }
 .Contact-Icon{
     width: 60px;
     height: 60px;
     margin-right: 20px;
+}
+.Contact-desc{
+    font-weight: 200;
+}
+form{
+    margin-top: 20px;
+}
+input{
+    width: 50%;
+    height: 50px;
+    border: none;
+    border-bottom: 1px solid black;
+    margin: 10px 0px;
+    font-size: 14px;
+    padding-left: 10px;
+}
+
+textarea{
+    width: 100%;
+    margin: 10px 0px;
+    font-size: 14px;
+    padding-left: 10px;
+    
+}
+button{
+    border: none;
+    padding: 15px;
+    background-color: rgb(156, 243, 56);
+    color: white;
+    font-weight: 800;
+    cursor: pointer;
+}
+@media screen and (max-widht: 480px){
+    .Contact-wrapper{
+        font-display: column;
+    }
+    
 }
