--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -2,7 +2,6 @@
     height: 320vh;
     display: flex;
     align-items: center;
-    border: solid 3px;
 }
 .About-left{
     flex: 1;
@@ -21,8 +20,7 @@
     left: 50px;
     background-color: rgb(156, 243, 56);
     clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-    
-    
+
 }
 .About-card{
     width: 60%;
@@ -53,4 +51,32 @@
 }
 .About-Skill{
     margin-top: 15px;
+}
+
+@media screen and (max-width:480px) {
+    .About{
+        flex-direction: column;
+        text-align: center;
+        margin-top: 50px;
+        height: 354vh;
+        
+    }
+    .About-left{
+        width: 100%;
+    }
+    .About-card{
+        width: 77%;
+        height: 65vh;
+        position: relative;
+        bottom: 52px;
+        right: 5px;
+    }
+    .About-card.bg{
+        position: absolute;
+        top: -51px;
+        left: 71px;
+        background-color: rgb(156, 243, 56);
+        clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+    }
+    
 }
