--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -9,10 +9,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+   
 }
 .intro-right{
     flex: 1;
     position: relative;
+    
 }
 .intro-left-wrapper{
     padding: 50px;
@@ -36,6 +38,7 @@
 .intro-title-wrapper{
     height: 100%;
     animation: move 12s ease-in-out infinite alternate;
+    border: solid 2px;
 }
 @keyframes move {
     25%{
@@ -78,19 +81,56 @@
 }
 @media screen and (max-width: 480px){
     .intro{
-        height: 150vh;
-        font-display: column;
-        border: solid 2px;
-        
+        flex-direction: column;
+    
+    }
+    .intro-left{
+        width: 470px;
     }
     .intro-left-wrapper{
-        padding: 10px;
+        padding: 0px;
         align-items: center;
         justify-content: center;
         text-align: center;
         height: 100%;
     }
-    .Intro-desc{
+    .intro-title{
+        height: 50px;
+        overflow: hidden;
+       
+    }
+    .intro-title-wrapper{
+        height: 100%;
+        animation: move 12s ease-in-out infinite alternate;
+        border: solid 2px;
+    }
+    .intro-title-item{
+        height: 50px;
+        font-size: 20px;
+        font-weight: bold;
+        color: rgb(156, 243, 56);
+        display: flex;
+        align-items: center ;
+    }
+    .intro-desc{
         display: none;
+    }
+    .intro-img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        position: absolute;
+        /* right: -10px; */
+        left: 1px;
+        top: -49px;
+    }
+    .intro-profil-bg{
+        clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+        background-color: rgb(156, 243, 56);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: -48px;
+        right: 0px;
     }
 }
