--- a/src/Components/Product/product.css
+++ b/src/Components/Product/product.css
@@ -28,3 +28,9 @@
 .product:hover .product-img{
     transform: translateY(-100%);
 }
+@media screen and (max-width:480px) {
+    .product{
+        height: 110px;
+        width: 195px;
+    }
+}
