--- a/src/Components/ProductList/productlist.css
+++ b/src/Components/ProductList/productlist.css
@@ -23,10 +23,22 @@
 }
 /* adjust flexwrap */
 
-.ProductList-Container{
-    border: 5px solid;
-}
 .ProductList-Title{
     font-weight: bold;
     text-align: left;
+}
+@media screen and (max-width:480px) {
+    .ProductList{
+       padding: 10px;
+    }
+    .ProductList-teks{
+        width: 100%;
+    }
+    .ProductList-title{
+        font-size: 40px;
+        font-weight: 600;
+        padding-left: 0;
+
+    }
+    
 }
